# fake_traffic

./: LICENSE  README.md  fake_traffic.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
fake_traffic/: __init__.py  cli.py  fake_traffic.py
