[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_traffic"
description = "Imitating an Internet user by mimicking popular web traffic."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["python", "traffic generator"]
authors = [
  {name = "deedy5"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.41.2",
    "playwright_stealth>=1.0.6",
]
dynamic = ["version"]

[project.urls]  # Optional
"Homepage" = "https://github.com/deedy5/duckduckgo_search"

[project.scripts]
fake_traffic = "fake_traffic.cli:fake_traffic"

[tool.setuptools.dynamic]
version = {attr = "fake_traffic.version.__version__"}
